initial sidebar with process listing implemented

--- a/nodes/locales/en-US/erlprocess.json
+++ b/nodes/locales/en-US/erlprocess.json
@@ -3,7 +3,9 @@
 
 
     "label": {
-      "statusset": "Status Set"
+      "statusset": "Status Set",
+      "process": "Process Id",
+      "capture_io": "Capture I/O?"
     },
 
     "status": {
