added process name to a process node

--- a/nodes/locales/en-US/erlprocess.json
+++ b/nodes/locales/en-US/erlprocess.json
@@ -5,6 +5,7 @@
     "label": {
       "statusset": "Status Set",
       "process": "Process Id",
+      "process_name": "Process Name",
       "capture_io": "Capture I/O?"
     },
 
